src/App.css
/* ... */
    /* Form section end */

    /* Film search list section start */
      .queryList {
        height: inherit;
        overflow: auto;
        width: 700px;
        margin: 0 auto;
        padding-left: 48px;
      }

      .error {
        background: rgba(40, 48, 68, 0.851);
        padding: 25px;
        text-align: center;
        width: 600px;
      }

      img {
        text-align: center;
      }

      .queryItem {
        background: rgba(40, 48, 68, 0.851);
        border: none;
        color: #EBF5EE;
        display: flex;
        margin: 10px 0 10px;
        min-width: 600px;
        padding: 0;
        width: 80%;
      }

      .queryContent {
        display: flex;
        height: 240px;
        flex: 3 1 70%;
        flex-direction: column;
        margin: 15px 15px 0 15px;
        overflow: hidden;
        text-align: left;
        text-overflow: ellipsis;
        white-space: normal;
      }

      .overviewBox {
        height: 90%;
        overflow: auto;
      }

      .queryContent button {
        border: 1px solid #EBF5EE;
        margin: 10px 0;
        padding: 10px;
        width: 50%;
      }
    
      .queryItem:hover {
        filter: drop-shadow(8px 8px 10px rgb(22, 21, 21));
      }

      .queryItem .imgContainer {
        flex: 1 1 30%;
        min-width: 150px;
      }

      .queryItem h3 {
        overflow: scroll;
        padding: 0 0 20px;
      }

    /* Film search list section end */

    /* Film info section start */
      .movieInfo {
        background: rgba(40, 48, 68, 0.851);
        position: fixed;
        width: 700px;
        height: 400px;
        left: 50%;
        top: 10%;
        margin-left: -350px;
        z-index: 10;
        overflow-y: scroll;
      }

      .posterAndInfo {
        display: flex;
        height: auto;
      }

      .movieInfoImgContainer {
        max-width: 100px;
        flex: 1 1 30%;
      }

      .movieInfoContentContainer {
        padding: 10px 10px 0 10px;
        flex: 1 1 70%;
      }

      .releaseRuntimeRating {
        display: flex;
        justify-content: space-between;
      }

      .trailer {
        width: 100%;
        height: 100%;
      }

      .trailerBox {
        height: 400px;
      }

      .movieInfo button{
        bottom: 0;
        height: 50px;
        position: sticky;
        width: 100%;
      }

    /* Film info section end */

    /* Your flicks (FlickList.js) section start */
      .menuTop {
        background: rgba(40, 48, 68, 0.851);
        border: none;
        color: #EBF5EE;
        height: 100px;
        position: fixed;
        width: inherit;
        text-align: center;
      }

      .menuTop h2 {
        margin-top: 60px;
      }

      aside {
        background-color: #EBF5EE;
        position: fixed;
        height: 100vh;
        overflow: auto;
        right: -500px;
        transition: 1s ease all;
        width: 300px;
        z-index: 1;
      }

      .userList li:first-child {
        margin-top: 100px;
      }

      .userList li:last-child {
        margin-bottom: 50px;
      }

      .flickListItem {
        margin-top: 5px;
        padding: 5px;
      }

      .flickListItem h3 {
        color: #283044;
        margin: 5px 0;
        text-align: center;
        text-transform: uppercase;
      }

      .flickListItem img {
        width: 80%;
      }

      .flickListItem button {
        background: rgba(40, 48, 68, 0.851);
        border: 1px solid rgba(40, 48, 68, 0.851);
        color: #EBF5EE;
        width: 80%;
      }

      .flickListItem button:hover {
        border: 1px solid #E49273;
        color: #E49273; 
      }

      .randomize {
        background: rgba(40, 48, 68, 0.851);
        border: none;
        bottom: 0;
        right: -500px;
        color: #EBF5EE;
        height: 50px;
        position: fixed;
        width: inherit;
        transition: 1s ease all;
      }

      .showList {
        right: 0
      }
    /* Your flicks (FlickList.js) section end */

    /* Random Choice starts */
      .randomChoice {
        background: rgba(40, 48, 68, 0.851);
        display: flex;
        height: 200px;
        left: 50%;
        margin-top: 100px;
        margin-left: -300px;
        padding: 25px 25px 10px 25px;
        position: absolute;
        top: 50%;
        width: 600px;
        z-index: 10;
      }

      .randomChoice h4 {
        font-size: 2rem;
        text-align: center;
      }

      .randomChoice button {
        margin-top: 15px;
      }

    /* Random Choice ends */


/* MEDIA QUERIES START */

@media (max-width: 900px) {
  h1 {
    font-size: 3.5rem;
  }

  .error {
    width: 430px;
  }

  .formInput {
    width: 330px;
  }

  .headerUp {
    margin-top: 50px;
  }

  .helpContents {
    width: 430px;
    top: 230px;
  }

  .showHelp {
    width: 430px;
  }

  .movieInfo {
    width: 650px;
    margin-left: -325px;
  }
}

@media (max-width: 700px) {
  .queryList {
    width: 430px;
    padding-left: 0;
  }

  .queryItem {
    min-width: auto;
    width: 100%;
  }

  .queryContent {
    height: 200px;
  }

  .movieInfo {
    width: 500px;
    margin-left: -250px;
  }
}

@media (max-width: 600px) {
  aside {
    width: 100%;
    right: -600px;
  }

  .error {
    width: 300px;
  }

  .queryContent {
    flex: auto;
  }

  .queryContent button {
    margin-top: 15px;
  }

  .flickListItem img {
    width: 40%;
  }

  .flickListItem button {
    width: 40%;
  }

  .hamburger {
    right: 30px;
  }

  .overviewBox {
    height: auto;
  }

  .queryItem {
    min-width: auto;
    flex-direction: column;
    align-items: center;
  }

  .queryContent {
    height: auto;
  }

  .randomize {
    right: -600px;
  }

  .showList {
    right: 0px
  }

  .movieInfo {
    width: 450px;
    margin-left: -225px;
  }
}
/* ... */

